# historef

./: .gitignore  Dockerfile  README.md  pyproject.toml
historef/: center.py  grid.py  matchraster.py  referencer.py  transform.py  util.py
notebook/: Automated-b02a-process.ipynb  Automated-b02a.ipynb  Automated-b04c.ipynb  Automated-b04d.ipynb  Automated-b08c.ipynb  Automated-b09a.ipynb  Automated4.ipynb  Automated_Georeferencing.ipynb  Grouped_transform.ipynb
script/: fit-sing.sh  fit.sh
tests/: test_center.py  test_grid.py  test_util.py
