[tool.poetry]
name = "historef"
version = "0.1.0"
description = ""
authors = ["Yongha Hwang <yongha.hwang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.9.0.80"
scipy = "^1.11.4"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.10"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
